fix: Update margin, padding, spacing

--- a/src/App/shared/Footer/SlackEmailForm/index.css
+++ b/src/App/shared/Footer/SlackEmailForm/index.css
@@ -2,6 +2,7 @@
     margin: auto;
     margin-top: 2%;
     display: block !important;
+    margin-bottom: 2% !important;
 }
 
 #slack-email-input {
@@ -12,6 +13,5 @@
     background-color: #03a9f4;
     color: #fff;
     margin: auto;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-top: 4%;
 }
