--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   padding: 0;
 
   width: 100vw;
-  height:100vh;
 
-  background-color: #263238;
+
+  background-color: #263238 !important;
 
 }
 
